--- a/assets/styles/bootstrap-5.0.0-beta3-dist/bootstrap-5.0.0-beta3-dist/css/style.css
+++ b/assets/styles/bootstrap-5.0.0-beta3-dist/bootstrap-5.0.0-beta3-dist/css/style.css
@@ -1,6 +1,7 @@
-.my-img {
+.my-img{
     position: relative;
     overflow: hidden;
+    box-shadow: 8px 7px 10px 5px gray;
     border-radius: 8px;
     z-index: 1;
 }
@@ -22,10 +23,11 @@
 .my-img1{
     position: relative;
     overflow: hidden;
+    box-shadow: 8px 7px 4px 6px grey; 
     border-radius: 8px;
     z-index: 1;
 }
-.my-img::before{
+.my-img1::before{
     content: "";
     background: rgba(122, 105, 96, 0.6);;
     position: absolute;
@@ -35,7 +37,7 @@
     bottom: 0;
     z-index: 2;
 }
-.my-img:hover::before{
+.my-img1:hover::before{
     left: 0
 }
 .my-img2{
@@ -43,11 +45,12 @@
     overflow: hidden;
     border-radius: 8px;
     z-index: 1;
+    box-shadow: -8px 10px 4px 6px gray;
 }
-.my-img:hover::before{
+.my-img2:hover::before{
     left: 0
 }
-.my-img::before{
+.my-img2::before{
     content: "";
     background: rgba(122, 105, 96, 0.6);;
     position: absolute;
@@ -62,11 +65,32 @@
     overflow: hidden;
     border-radius: 8px;
     z-index: 1;
+    box-shadow: 8px -8px 8px 8px gray;
 }
-.my-img::before{
+.my-img3::before{
+    position: absolute;
     left: 0
 }
-.my-img:hover::before{
+.my-img3:hover::before{
+    content: "";
+    background: rgba(122, 105, 96, 0.6);;
+    top: 0;
+    right: 0;
+    left: 100;
+    bottom: 0;
+    z-index: 2;
+}
+.my-img4{
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    z-index: 1;
+    box-shadow: -0px -7px 3px 4px gray;
+}
+.my-img4::before{
+    left: 0
+}
+.my-img4:hover::before{
     content: "";
     background: rgba(122, 105, 96, 0.6);;
     position: absolute;
@@ -75,4 +99,47 @@
     left: 100;
     bottom: 0;
     z-index: 2;
+}
+.my-img5{
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    z-index: 1;
+    box-shadow: -6px -7px 8px 8px gray;
+}
+.my-img5::before{
+    left: 0
+}
+.my-img5:hover::before{
+    content: "";
+    background: rgba(122, 105, 96, 0.6);;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 100;
+    bottom: 0;
+    z-index: 2;
+}
+.img-fluid{
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    z-index: 1;
+    box-shadow: 4px 7px 8px 3px gray;
+}
+.img-fluid::before{
+    left: 0
+}
+.img-fluid:hover::before{
+    content: "";
+    background: rgba(122, 105, 96, 0.6);;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 100;
+    bottom: 0;
+    z-index: 2;
+}
+.dash{
+    
 }
