--- a/main.css
+++ b/main.css
@@ -28,11 +28,109 @@ img:hover{
     background-color: rgb(250, 224, 228);
 }
 .rounded{
-    border-bottom: solid rgb(255, 81, 0) 5px;
-    border-radius: 500px;
+    /* border-bottom: solid rgb(255, 81, 0) 5px; */
+    border-radius: 0 0 54px !important;
     padding: 20px;
     transition: all .8s ease;
 }
 .rounded:hover{
     transform: translateY(-5%);
+    border-bottom: solid rgb(243, 134, 9) 5px;
+
 }
+/* .clients .clients-slider .swiper-slide img{
+    opacity: 0.5;
+    transition: 0.3s;
+
+}
+.clients .clients-slider .swiper-slide img:hover{
+    opacity: 1;
+}
+.clients .clients-slider .swiper-pagination{
+    margin-top: 20px;
+    position: relative;
+}
+.clients .clients-slider .swiper-pagination .swiper-pagination-bullet{
+    width: 12px;
+    height: 12px;
+    background-color: #fff;
+    opacity: 1;
+    border: 1px solid orange;
+} */
+/* # Clients
+--------------------------------------------------------------*/ */
+.section-bg {
+    background-color: #fef8f5;
+  }
+  .section-title {
+    text-align: center;
+    padding-bottom: 30px;
+  }
+  .section-title h2 {
+    font-size: 30px;
+    font-weight: 700;
+    padding-bottom: 0;
+    line-height: 1px;
+    margin-bottom: 15px;
+    color: #c2b7b1;
+  }
+  .section-title p {
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    position: relative;
+    font-size: 32px;
+    font-weight: 700;
+    color: #4e4039;
+  }
+  .section-title p::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 60px;
+    height: 2px;
+    background: #eb5d1e;
+    bottom: 0;
+    left: calc(50% - 30px);
+  }
+    
+.clients .clients-slider .swiper-slide img {
+  opacity: 0.5;
+  transition: 0.3s;
+}
+.clients .clients-slider .swiper-slide img:hover {
+  opacity: 1;
+}
+.clients .clients-slider .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+.clients .clients-slider .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+  border: 1px solid #eb5d1e;
+}
+.clients .clients-slider .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #eb5d1e;
+}
+.btn-warning{
+  font-weight: 500;
+}
+/* .color{
+  border-top: solid rgb(243, 134, 9) 5px;
+} */
+.type{
+  /* margin-left: 50%; */
+}
+li{
+  color: rgb(0, 255, 115);
+}
+
+
+ .nav-link{
+  color:white !important; 
+}
+.nav-link:hover{
+  color: rgb(255, 153, 0) !important;
+} */
